# woorung-gaksi

./: .cursorrules  .gitignore  AGENTS.md  Hello.py  READMD.md  README.md  docker-compose.yml  start_all.sh
.agent/planning/: alpha_k_v2_roadmap.md
.agent/rules/: 01_market_regime.md  02_sector_rotation.md  03_technical_strategy.md  04_fundamental.md  05_smart_money.md  06_risk_management.md  PRODUCT_CONTEXT.md  PROJECT_RULES.md
.agent/workflows/: 01_scaffold_service.md  02_implement_feature_tddd.md  03_orchestrate_agent_job.md  04_main_pipeline.md
services/alpha-k/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt
services/alpha-k/docs/: design_architecture_v2.md  refactoring_log.md  user_guide_v2.md
services/alpha-k/src/: api_main.py  main.py  scheduler.py
services/alpha-k/src/agents/: __init__.py  fundamental_agent.py  macro_agent.py  portfolio_optimizer.py  risk_agent.py  sector_agent.py  sentiment_analyzer.py  (+2 more)
services/alpha-k/tests/: test_refactoring.py
services/core-gateway/: .gitignore  Dockerfile  go.mod  go.sum
services/core-gateway/config/: config.go
services/openclaw/: Dockerfile  openclaw.json
services/openclaw/skills/: alpha_k.md  pm_agent.md
services/pm-agent/: .env.example  .gitignore  Dockerfile  pyproject.toml
services/pm-agent/src/: main.py
services/pm-agent/src/infrastructure/: database.py
services/pm-agent/src/modules/manager/: graph.py  state.py
services/pm-agent/src/shared/: config.py
services/pm-agent/src/tools/: README.md  alpha_k.py  code_gen.py  file_ops.py  web_search.py
(+50 files in other folders)
